# infrastructure-cost-tracker

./: .coverage  AI_COST_OPTIMIZATION.md  AI_GATEWAY_ALTERNATIVES_COMPLETE.md  AI_STARTUP_INFRASTRUCTURE_COMPLETE.md  AI_WHISPERERS_SKILL_RECOMMENDATIONS.md  API_KEYS_STATUS.md  COMPREHENSIVE_SKILL_ANALYSIS.md  COORDINATING_REPO_STRUCTURE.md  DEPLOYMENT_COMPLETE.md  HELICONE_COMPLETE_SETUP_GUIDE.md  HELICONE_DEPLOYMENT_STEPS.md  HELICONE_OPENCLAW_SETUP.md  LEGAL_COMPLIANCE.md  Makefile  ONBOARDING_PROCESS.md  OPENCLAW_MULTI_INSTANCE_SETUP.md  OPENCLAW_STATUS.md  QUICK_START.md  README.md  README_NAVIGATION.md  RESEARCH_ROADMAP.md  SECURITY_HARDENING_COMPLETE.md  SETUP_COMPLETE.md  install-comprehensive-skills.sh  install-docker.sh  pyproject.toml
.github/workflows/: ci.yml
helicone/: .env  config.yaml  docker-compose.yml
infrastructure_cost_tracker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
julian-goldie-openclaw-analysis/: ANALYSIS.md  COSTS_AND_PRICING.md  DAVID_ONDREJ_ANALYSIS.md  GOLDEN_SETUP.md  IMPROVEMENTS.md  README.md  SETUP.md  TECH_WITH_TIM_ANALYSIS.md  VIDEO_ANALYSIS.md  WES_ROTH_ANALYSIS.md  WORKFLOWS.md
openclaw-config/: .env.template  README.md  cost-limits.json  exec-approvals.json  openclaw.json
openclaw-config/docs/: SKILL_INSTALLATION_COMPLETE.md
openclaw-config/scripts/: audit-skill.sh  backup.sh  install-and-run-helicone.sh  monitor.sh  secure-install-skill.sh  setup-openclaw.sh
openclaw-config/security/: COMPREHENSIVE_SECURITY_AUDIT.md  SKILL_SECURITY_GUIDE.md  (+2 more)
scripts/: monitor_costs.py
tests/: test_cost_tracker.py
(+12 files in other folders)
